--- a/tutos/themes/gentoo/theme.toml
+++ b/tutos/themes/gentoo/theme.toml
@@ -1,21 +1,24 @@
 # theme.toml template for a Hugo theme
-# See https://github.com/gohugoio/hugoThemes#themetoml for an example
+# See https://github.com/spf13/hugoThemes#themetoml for an example
 
-name = "Gentoo"
+name = "Hugo Gentoo Theme"
 license = "MIT"
-licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE.md"
-description = ""
-homepage = "http://example.com/"
-tags = []
-features = []
-min_version = "0.26"
+licenselink = "https://github.com/d-kusk/hugo-gentoo-theme/blob/master/LICENSE.md"
+description = "It is the theme of Hugo. Created by imagining the Gentoo penguin."
+homepage = "https://github.com/d-kusk/hugo-gentoo-theme"
+tags = ["blog", "responsive"]
+features = ["blog", "themes", "responsive", "Google Analytics"]
+min_version = 0.19
 
 [author]
-  name = ""
-  homepage = ""
+  name = "Daisuke Konishi"
+  homepage = "https://blog.daisukekonishi.com"
 
 # If porting an existing theme
 [original]
-  name = ""
-  homepage = ""
-  repo = ""
+  name = "Gentoo"
+  homepage = "https://github.com/d-kusk/hugo-gentoo-theme/"
+  repo = "https://github.com/d-kusk/hugo-gentoo-theme/"
+
+[params]
+  dateformat = "Jan 2, 2006" # Optional
