pycharm tutorial begins

--- a/tutos/config.json
+++ b/tutos/config.json
@@ -2,10 +2,11 @@
     "baseURL": "/",
     "relativeURLs": true,
     "uglyurls": true,
+    "enableEmoji": true,
     
     "languageCode": "fr-fr",
     "title": "Tutoriaux",
-
+    
     "theme": "informatique_hugo_theme",
     
     "params": {
